--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
              document.forms.display.value += '-';
            });
            $('#multi').click(function(){
-             document.forms.display.value += '*';
+             document.forms.display.value += '×';
            });
            $('#divide').click(function(){
              document.forms.display.value += '/';
