--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
 
       <img id="planet" src="https://tsparticles.github.io/404-templates/space/images/planet.svg" />
 
-      <a href="#"><button class="denied__link">Go Home</button></a>
+      <a href="https://sneazy25.my.id"><button class="denied__link">Go Home</button></a>
 
     </div>
 
