--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 
 
 
-    <title>Space | tsParticles 404</title>
+    <title>Error Document 404!</title>
 
     <link type="text/css" rel="stylesheet" href="https://tsparticles.github.io/404-templates/space/css/404.css" />
 
@@ -54,7 +54,7 @@
 
       <h3>
 
-        LOST IN <span>SPACE</span> App-Name? Hmm, looks like that page doesn't
+        LOST IN <span>SPACE</span> Calculator? Hmm, looks like that page doesn't
 
         exist.
 
